# asparagus_preprocessing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_from_open.yaml  deploy_to_oasparagus_preprocessing.yaml  deploy_to_open.yaml  update_deploy.yaml
asparagus_preprocessing/: paths.py
asparagus_preprocessing/configs/: preprocessing_presets.py
asparagus_preprocessing/datasets_classification/: CLS000_LauritSynCls.py  CLS002_FOMO26_Infarct.py  CLS002_FOMO26_Infarct_CUSTOM.py  CLS003_FOMO26_Polymicrogyria.py  TEMPLATE.py
asparagus_preprocessing/datasets_pretraining/: PT000_LauritSSL.py  PT000_LauritSSL2D.py  PT000_LauritSSL_PNG.py  PT001_ClevelandCCF.py  PT001i_ClevelandCCF_ISO.py  PT002_NigerianClinical.py  PT002i_NigerianClinical_ISO.py  PT003_CUNMET.py  PT003i_CUNMET_ISO.py  PT004_ACPI.py  PT004i_ACPI_ISO.py  PT005_ADHD_200.py  PT005i_ADHD_200_ISO.py  PT006_AHEAD.py  PT006i_AHEAD_ISO.py  PT007_ATAG.py  PT007i_ATAG_ISO.py  PT008_AdolescentBrainDevelopment.py  PT008i_AdolescentBrainDevelopment_ISO.py  PT009_BraTS_GEN.py  PT009i_BraTS_GEN_ISO.py  PT010_BrainLat.py  PT010i_BrainLat_ISO.py  PT011_CFMM_7T.py  PT011i_CFMM_7T_ISO.py  PT012_CHBMP.py  PT012i_CHBMP_ISO.py  PT013_Calgary_Preschool.py  PT013i_Calgary_Preschool_ISO.py  PT014_CoRR.py  PT014i_CoRR_ISO.py  PT015_MSD_BrainTumor.py  PT015i_MSD_BrainTumor_ISO.py  PT016_GSP.py  PT016i_GSP_ISO.py  PT017_HBN_SSI.py  PT017i_HBN_SSI_ISO.py  PT018_HBN.py  PT018i_HBN_ISO.py  PT019_HCP_Wu_Minn_Test_Retest.py  (+44 more)
asparagus_preprocessing/datasets_regression/: REGR000_LauritSynRegr.py  REGR002_FOMO26_BrainAge.py  TEMPLATE.py
asparagus_preprocessing/datasets_segmentation/: SEG000_LauritSynSeg.py  SEG001_LauritSynSeg.py  SEG002_SBM.py  SEG002i_SBM_ISO.py  SEG003_ISLES22_ADCDWI.py  SEG003_ISLES22_ADCDWI_ISO.py  SEG004_ATLAS2.py  SEG004i_ATLAS2_ISO.py  SEG007_CEREBRUM-7T.py  SEG007i_CEREBRUM-7T_ISO.py  SEG008_WMH.py  SEG008i_WMH_ISO.py  SEG009_FOMO26_Meningioma.py  SEG009_FOMO26_Meningioma_CUSTOM.py  SEG010_FOMO26_TrigeminalNeuralgia.py  TEMPLATE.Py
asparagus_preprocessing/scripts/: process.py  register_dataset.py  replace_prefix.py  split.py  update_paths.py
asparagus_preprocessing/utils/: __init__.py  bbox.py  crop.py  dataclasses.py  dataset_registration.py  detect.py  loading.py  metadata_generation.py  mp.py  nifti.py  normalize.py  pad.py  parser.py  path.py  process_case.py  resample.py  saving.py  splitting.py
asparagus_preprocessing/utils/bids/: __init__.py  bids.py  config.py  extractors.py  standardizers.py
docs/: environment_variables.md  example_dataset_json.md  example_directory_structure.md  how_to_write_a_preprocessing_script.md
notebooks/: tutorial_register_dataset.ipynb
